[cleanup] fix deprecation warnings
Change-Id: I66c125ce1d408321e864530e48ef30b09f12ef3b
Signed-off-by: Ernst Blecha <ernst.blecha@jku.at>